Non-original figure captions.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -261,8 +261,10 @@ As an alternate reality paradigm cross reality has its roots in work undertaken 
 
 It was the subsequent work of the Responsive Environments Group at MIT's Media Lab, centred around the research of Joshua Lifton in combining the Plug sensor/actuator platform~\cite{Lifton2007b} with a Second Life hosted virtual model of the physical Lab (shown in figure \ref{lifton_shadow_lab.png}) in the `Shadow Lab' project, that truly launched cross reality as an area of research potential. The Shadow Lab project did not allow for tandem visual engagement with both constituent environments of the cross reality platform, focussing instead on the interplay of sensor data and actuator commands exchanged between the environments. This visual aspect was addressed in part by the subsequent Ubiquitous Sensor Portal project, which situated 45 I/O rich `portals' (figure \ref{ubiquitous_sensor_portal.jpg}) throughout the Lab, each with a corresponding extension in Second Life. However in stark contrast to the Shadow Lab project, these portals were not situated in a simulation of the real Lab in situations corresponding to their physical location, but instead in an abstract virtual representation with a geometric layout reflecting intellectual affiliation as opposed to real-world location.
 
-\TwoFig{lifton_shadow_lab.png} {Side view of the virtual Shadow Lab.} {lifton_shadow_lab.png}
-       {ubiquitous_sensor_portal.jpg} {A Ubiquitous Sensor Portal.} {ubiquitous_sensor_portal.jpg}
+\TwoFig{lifton_shadow_lab.png} {Side view of the virtual Shadow Lab~\cite{Lifton2007a}, image courtesy Joe Paradiso.} {lifton_shadow_lab.png}
+       {ubiquitous_sensor_portal.jpg} {A Ubiquitous Sensor Portal\protect\footnotemark , image courtesy Joe Paradiso.} {ubiquitous_sensor_portal.jpg}
+
+\footnotetext{ \url{http://resenv.media.mit.edu/portals/} }
 
 One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem':
 
