Non-original figure captions.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -33,7 +33,7 @@ Due to the diverse approaches that have been used in the application of visualiz
 \begin{figure}[h]
 \centering
   \includegraphics[width=.7\linewidth]{taxonomy_1.png}
-  \caption{Taxonomical space of visualization strategies used in cultural heritage.}
+  \caption{Taxonomical space of visualization strategies used in cultural heritage~\cite{Foni2010}, image courtesy Nadia Magnenat-Thalmann.}
   \label{taxonomy_1.png}
 \end{figure}
 
@@ -48,7 +48,7 @@ The shading of each point within the cube represents its degree of virtuality, c
 \begin{figure}[h]
 \centering
   \includegraphics[width=.8\linewidth]{taxonomy_2.png}
-  \caption{Coordinate sets for each approach within the taxonomical space of figure \ref{taxonomy_1.png}.}
+  \caption{Coordinate sets for each approach within the taxonomical space of figure \ref{taxonomy_1.png} ~\cite{Foni2010}, image courtesy Nadia Magnenat-Thalmann.}
   \label{taxonomy_2.png}
 \end{figure}
 
@@ -92,16 +92,16 @@ These sitsim systems have been labelled by their creators as examples of `indire
 
 However likening the Unity based virtual environments of sitsim systems to the panoramic photographs of indirect augmented reality does not fit well with the definition of augmented reality adopted in table \ref{adopted-alternate-reality-definitions} and undervalues the novelty of sitsim as a concept. Fundamentally the indirect augmented reality platforms presented by Wither et al. still present the user, via the screen of the device, with a view of the real environment upon which virtual objects are placed, even though that view of the real environment is no longer `live' but is instead a photograph captured at a previous point in time. The sitsim platforms presented by Liest\o l et al. however, present via the screen of the device a view of a complete virtual environment rather than a mediated and augmented image of the real environment.
 
-Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liest\o l et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} taken from~\cite{Liestøl2011} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}). Furthermore Liest\o l speaks of how sitsim creates \textit{``double perspective''}~\cite{Liestøl2009}, allowing presentation of topics and subject matters absent or invisible in the real world, wherein the user performs \textit{``oscillations between \ldots\ double descriptions''}~\cite{Liestøl2014}, further alluding to the notion of two complete environments that the user switches their attention between.
+Whilst one could argue that the experience of using a sitsim platform is similar to that of an indirect augmented reality platform, even if it is the human mind that is ultimately performing the `mixing' of the virtual environment with the real environment whilst in a `true' indirect augmented reality platform the mixing of virtual objects and real environment is performed upon the device, a distinction should be made to appreciate that a sitsim system nonetheless presents users with two complete environments, one real and the other virtual, rather than a single environment consisting of a real primary environment augmented by virtual objects. This distinction was raised by Liest\o l et al. and visualised upon the reality-virtuality continuum in figure \ref{sitsim-1.png} (compare this with the explanation of parallel reality in section \ref{positionofcrossreality} around figure \ref{virtuality-continuum-cross-reality-1}). Furthermore Liest\o l speaks of how sitsim creates \textit{``double perspective''}~\cite{Liestøl2009}, allowing presentation of topics and subject matters absent or invisible in the real world, wherein the user performs \textit{``oscillations between \ldots\ double descriptions''}~\cite{Liestøl2014}, further alluding to the notion of two complete environments that the user switches their attention between.
 
 \begin{figure}[h]
 \centering
   \includegraphics[width=.6\linewidth]{sitsim-1.png}
-  \caption{The two complete environments of a sitsim platform.}
+  \caption{The two complete environments of a sitsim platform~\cite{Liestøl2011}, image courtesy of Springer.}
   \label{sitsim-1.png}
 \end{figure}
 
-In recognising this distinction a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality also neatly avoids the somewhat confusing visualisation from Liest\o l et al. in~\cite{Liestøl2011} of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality.
+In recognising this distinction a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality also neatly avoids the somewhat confusing visualisation from Liest\o l et al. of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality~\cite{Liestøl2011}.
 
 %sitsim-2.png
 
