--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -403,14 +403,14 @@ For outdoor applications GPS represents a suitable solution for the vast majorit
 	\begin{center}
 		\includegraphics[width=\linewidth]{mautz-table.png}
 	\end{center}
-	\caption{Overview of IPS technologies}
+	\caption{Overview of IPS technologies~\cite{Mautz2012}, table courtesy Rainer Mautz.}
 	\label{mautz-table.png}
 \end{table}
 
 Because of this diversity in technologies with different IPS solutions covering various swathes of the continuums of accuracy and coverage (see figure \ref{Mautz-000.png} from Mautz~\cite{Mautz2012}), introducing a host of performance and suitability considerations, it is necessary to carefully consider the requirements of an indoor positioning application (see figure \ref{Mautz-003.png} from Mautz~\cite{Mautz2012}) in order to choose the best suited of the many different IPS approaches. Unsurprisingly selection of one approach usually leads to balancing these requirements in a trade-off, as each of the challenges of indoor positioning can effect each technology differently~\cite{Mautz2009}.
 
-\TwoFig{Mautz-000.png}{IPS technologies plotted against their accuracy and coverage.}{Mautz-000.png}
-       {Mautz-003.png}{Requirements parameters of IPS.}{Mautz-003.png}
+\TwoFig{Mautz-000.png}{IPS technologies plotted against their accuracy and coverage~\cite{Mautz2012}, image courtesy Rainer Mautz..}{Mautz-000.png}
+       {Mautz-003.png}{Requirements parameters of IPS~\cite{Mautz2012}, image courtesy Rainer Mautz..}{Mautz-003.png}
 
 %=========================================================================================================
 
