Edits to VTW chapter to put into past tense & change position against sitsim.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -18,7 +18,7 @@ This chapter presents the development of a preliminary parallel reality platform
 
 Alternate reality technologies have been used for over two decades~\cite{Roussou2002} to aid in the investigation, understanding and dissemination of information pertaining to our past in the fields of archaeology and cultural heritage. Whilst archaeology studies human activity through the recovery of remains, heritage is concerned also with intangible attributes of society; tradition, art, narratives and other cultural evidences~\cite{Roussou2002}. \textit{Virtual heritage} is the name given to the application of advanced imaging techniques, including alternate realities, to the synthesis, conservation, reproduction, representation, reprocessing and display of this cultural evidence~\cite{roussou:photorealism}.
 
-These techniques provide access to locations and artefacts scattered about the world which may reside in private collections inaccessible to scholars (much less to the general public) and outwith of their original context of creation~\cite{griffin:recovering}. They allow recreations to be made of the numerous cultural heritage objects that are deteriorating or are at risk of being lost, whether due to natural causes such as weather and natural disasters or due to acts of man such as civil war~\cite{Ikeuchi2003}.
+These techniques provide access to locations and artefacts scattered about the world which may reside in private collections inaccessible to scholars, much less to the general public, and outwith their original context of creation~\cite{griffin:recovering}. They allow recreations to be made of the numerous cultural heritage objects that are deteriorating or are at risk of being lost, whether due to natural causes such as weather and natural disasters or due to acts of man such as civil war~\cite{Ikeuchi2003}.
 
 Virtual heritage techniques offer substantial benefits to collaborative investigation of heritage sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through head-tracked HMDs, projected table surfaces, large screen displays and tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}. This combination of different techniques not only benefits experts, but has been used in the creation of contiguous platforms for building and managing exhibitions of 3D models of artefacts accessed in museums, galleries and via the Web~\cite{Wojciechowski2004}, focussed not only on the digitization and subsequent interaction with such content to aid in its preservation and protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians and the general public)~\cite{walczak:applications}.
 
@@ -40,7 +40,7 @@ Due to the diverse approaches that have been used in the application of visualiz
 This model classifies visualization strategies according to four continua, represented by the three physical dimensions of the cube and the degree of shading of each point within the cube. The x axis represents the level of automatism, which refers to the span of the development cycle required to produce the visualization; the y axis represents the level of precision, referring not only to the amount of geometrical detail but to all elements that can contribute to or enhance reliability; and the z axis represents the level of interactivity, defined in this context as:
 
 \begin{quote}
-	\textit{``its capacity to contextually offer the possibility to subjectively experience an interactive behaviour in a synchronous way, thus enabling the user the opportunity to meaningfully contribute to a given experience or to affect in real time the visualized  item''}~\cite{Foni2010}.
+	\textit{``\ldots its capacity to contextually offer the possibility to subjectively experience an interactive behaviour in a synchronous way, thus enabling the user the opportunity to meaningfully contribute to a given experience or to affect in real time the visualized  item''}~\cite{Foni2010}.
 \end{quote}
 
 The shading of each point within the cube represents its degree of virtuality, conceptually analogous to Milgram and Kishino's reality-virtuality continuum (see section \ref{milgram&kishino}) with real world/world unmodelled represented as solid black, virtual reality/world completely modelled as completely white and positions in-between as various shades of grey. Foni et al. explain the position of 16 visualization techniques applied to cultural heritage, including both traditional techniques and state-of-the-art methodologies, by their positions within the cube and via the table included as figure \ref{taxonomy_2.png}.
@@ -84,7 +84,7 @@ One application of alternate reality techniques to the field of cultural heritag
 	\textit{``When using a situated simulation there is then approximate identity between the user’s visual perspective and perception of the real physical environment, and the user’s perspective in(to) the virtual environment as this is audiovisually presented by means of the phone and sitsim’s interface. The relative congruity between the `real' and the `virtual' is obtained by allowing the camera’s position, movement and orientation in the 3D environment, to be constrained by the orientation- and location technology of the smartphone: As the user moves the phone in real space the perspective inside the virtual space changes accordingly.''}~\cite{Liestøl2011}
 \end{quote}
 
-These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon very accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world. Indirect augmented reality forgoes a live camera feed of the real environment in place of previously captured panoramic photographs. Knowing the exact position that the photographs were captured at allows for zero registration error between virtual objects and the photographs, instead moving the registration error to the edges of the device's screen where the photographs meet the real environment they were captured from. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in a similar manner as to how parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
+These sitsim systems have been labelled by their creators as examples of `indirect augmented reality', a concept introduced by Wither at al.~\cite{Wither2011} to alleviate the dependency of traditional augmented reality systems upon highly accurate position and orientation data in order to successfully place virtual objects at the correct position upon camera feeds of the real world scene. Indirect augmented reality forgoes a live camera feed of the real environment in place of previously captured panoramic photographs. Knowing the exact position at which the photographs were captured allows for zero registration error between virtual objects and the photographs, instead moving the registration error to the edges of the device's screen where the photographs meet the real environment they were captured from. The effect is to improve the perceived quality of registration between virtual objects and real background, as registration error at the screen's edges is perceived as being `better' than between virtual objects and real background within the screen, in a similar manner as to how parallel reality was posited in section \ref{caseforpr} as having relaxed registration requirements over augmented reality implementations.
 
 \begin{quote}
 	\textit{``Moving registration error to the edge of the screen is better in part because it is a more difficult place to detect error due to both the bezel around the screen, and the altered field-of-view parameters of the on-screen image. In many ways, people are also already trained to believe that when they see a view of the real world on the screen of the mobile device it lines up with the world behind it. This is largely due to the proliferation of digital cameras already using the screen as a viewfinder.''}~\cite{Wither2011}
@@ -101,7 +101,7 @@ Whilst one could argue that the experience of using a sitsim platform is similar
   \label{sitsim-1.png}
 \end{figure}
 
-In recognising this distinction a platform in the style of sitsim becomes a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality also neatly avoids the somewhat confusing visualisation from Liest\o l et al. of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality~\cite{Liestøl2011}.
+In recognising this distinction a platform in the style of sitsim represents a potential basis for investigation of the parallel reality concept in scenarios with high spatial equivalence; indeed, Liest\o l's notion of `approximate identity' and the use of the term `situated' in the concept's title would seem to directly relate to the concept of spatial equivalence introduced in section \ref{spatial-equivalence}. Considering sitsim as spatially equivalent parallel reality instead of as indirect augmented reality also neatly avoids the somewhat confusing visualisation from Liest\o l et al. of sitsim occupying a region of the reality-virtuality continuum that falls within the realm of augmented reality but whilst simultaneously being outwith the region of mixed reality~\cite{Liestøl2011}.
 
 %sitsim-2.png
 
@@ -138,7 +138,7 @@ These reconstructions were made using OpenSim, an open source implementation and
 
 The reconstruction process involves the use of Geographic Information System (GIS) data from Ordnance Survey (OS) to accurately model the basic elevation of the ground. Where there is higher resolution elevation data, such as from Lidar laser surveying often employed on archaeological surveys, this is used to increase the accuracy of the resultant reconstruction. Where access to the site is possible and depending upon development surrounding the site prior to the date being reconstructed, 360\textdegree\ panoramic photographs are captured and used to create a backdrop for the reconstruction, allowing identifiable aspects of the surrounding environment to improve the experience of the reconstruction. Buildings/structures are then reconstructed upon the ground layer, using numerous sources as input; satellite views, archaeological surveys, contemporary accounts, views of the site itself (if evidence still exists), photographic evidence, etc. Domain experts are then consulted to iteratively improve the model, by commenting on aspects of the reconstruction to be altered in order to visualise different reconstructive hypotheses.
 
-To date these reconstructions have been used to host workshops at 10 different schools throughout Scotland, including both primary and secondary institutions, where all requisite computing infrastructure was taken, assembled at the school, then disassembled and removed at the end of the day. Students are split into groups of 4-5, sharing a computer with screen, keyboard, mouse and Xbox controller (a control modality instantly recognised by most school students). Worksheets with tasks are used to structure their interaction with the reconstructions and guide the experiential learning experience over 20-40 minute sessions (see figure \ref{linlithgow_children.jpg}). Similar workshops have also been performed in museums, using the same approach of temporary setups of computing hardware (see figure \ref{musa.jpg}). In addition to traditional computer screens, larger LCD television screens, still larger projection screens and Oculus Rift virtual reality HMDs have been used with this same content~(as seen in figure \ref{rift_exhibition.jpg}).
+To date these reconstructions have been used to host workshops at 10 different schools throughout Scotland, including both primary and secondary institutions, where all requisite computing infrastructure was taken, assembled at the school, then disassembled and removed at the end of the day. Students were split into groups of 4-5, sharing a computer with screen, keyboard, mouse and Xbox controller (a control modality instantly recognised by most school students). Worksheets with tasks were used to structure their interaction with the reconstructions and guide the experiential learning experience over 20-40 minute sessions (see figure \ref{linlithgow_children.jpg}). Similar workshops have also been performed in museums, using the same approach of temporary setups of computing hardware (see figure \ref{musa.jpg}). In addition to traditional computer screens, larger LCD television screens, still larger projection screens and Oculus Rift virtual reality HMDs have been used with this same content~(as seen in figure \ref{rift_exhibition.jpg}).
 
 In addition to these temporary workshops, the reconstructions have also been used in permanently installed exhibits in museums and visitor centres, including the Virtual Time Travel Project (VTTP) which combines multi-head projection with Natural User Interaction (NUI) via Microsoft Kinect and has been installed at the Timespan Museum and Arts Centre in Helmsdale. VTTP allows visitors to explore the reconstruction of the Caen Township by using simple gestures instead of relying upon a keyboard, game controller or other tangible interface, and can be seen in figure \ref{VTTP_projection.png} and in a video available to view online\footnote{\url{https://vimeo.com/90968731}}.
 
@@ -169,11 +169,11 @@ In addition to these temporary workshops, the reconstructions have also been use
 
 Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both), with sitsim representing one of the few exceptions. The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png} by using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
 
-Applying the concept of parallel reality to virtual heritage, possibly via a sitsim style interface, represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, while allowing investigation into the parallel reality concept in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of virtuality, as the user is provided the ability to alternately view the unmodified real environment (virtuality = 0) or the complete virtual environment (virtuality = 1). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
+Investigating the parallel reality concept by application to virtual heritage, possibly via a sitsim style interface, represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13, in a real world use case situation. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of virtuality, as the user is provided the ability to alternately view the unmodified real environment (virtuality = 0) or the complete virtual environment (virtuality = 1). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system requires a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
 
 %=========================================================================================================
 
-Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available particularly in terms of positional data represents a restriction upon the style of interaction possible with a parallel reality system, a point recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png}:
+Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available particularly in terms of positional data represents a restriction upon the style of interaction possible with a parallel reality system, a point recognised by Liest\o l et al. during their sitsim experiments~\cite{Liestøl2012}. Considering a scale of increasing accuracy, three use cases for parallel reality within cultural heritage scenarios can be envisioned, with each representing increased interactivity in the terms of figure \ref{taxonomy_1.png}:
 
 \begin{enumerate}
 	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any pair of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
@@ -187,9 +187,9 @@ Although parallel reality as a concept is less critical of accurate registration
 
 \section{The Virtual Time Window}
 \label{the-virtual-time-window}
-The Virtual Time Window (VTW) is a preliminary investigation into the application of parallel reality to virtual heritage, that leverages the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform that would allow investigation into parallel reality in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach would also allow for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
+The Virtual Time Window (VTW) was a preliminary investigation into the application of parallel reality to virtual heritage, that leveraged the OVW group's existing OpenSim reconstructions of cultural heritage sites in a handheld package that allows tandem exploration of both the real cultural heritage sites and their spatially equivalent virtual reconstructions. The challenge was not only to create a platform in the style of existing sitsim implementations that would allow investigation into the parallel reality concept in a virtual heritage scenario, but also to do so by making use of the OVW group's extensive catalogue of OpenSim based reconstructions. As discussed in section \ref{caseforpr} the ability of the parallel reality concept to make use of existing complete virtual models, without requiring a lengthy conversion phase of aspects of that content into an alternative format or framework, is one of its potential advantages. In the case of the OVW group's OpenSim content this approach also allows for potential interaction between on-site parallel reality visitors and remote participants interacting with the same models via a computer monitor, HMD, etc., thanks to OpenSim's distributed multi-user framework that leverages Internet connectivity.
 
-VTW is presented as a tablet computer which is capable of tracking its position via GPS, its compass heading (yaw) via magnetometer (`electronic compass') and its pitch via accelerometer. Existing augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
+VTW is presented as a tablet computer which is capable of tracking its position via GPS, its compass heading (yaw) via magnetometer (`electronic compass') and its pitch via accelerometer. Previous augmented reality and sitsim applications have proven the suitability of smartphones and tablets for mobile, position and orientation aware scenarios that present virtual objects within a cultural heritage context. These devices are entering ubiquity today, presenting a platform that can be quickly assimilated by most users.
 
 The tablet employed by VTW runs a modified version of the Second Life client that accesses, via wifi, a virtual reconstruction of a cultural heritage site hosted by an OpenSim server. The Second Life client is controlled entirely by the tablet's position and orientation - the user does not manually control any aspect. The modality of interaction offered is similar to that of using a smartphone to take a photograph, but whereas the screen of the smartphone shows the real environment as it is, the screen of the VTW tablet shows the environment as it was in the past - a window to the past, or \textit{Virtual Time Window}. The user is free to explore the real cultural heritage site, observing it in its current state, whilst at any moment `looking through' VTW to see what a particular vantage looked like in the past. Figure \ref{vtw_high_level.png} provides a high level conceptual overview of the components of the platform.
 
@@ -200,11 +200,9 @@ The tablet employed by VTW runs a modified version of the Second Life client tha
   \label{vtw_high_level.png}
 \end{figure}
 
-In terms of the combined Milgram/Waterworth model, the displacement along the locus axis when the user switches their attention between their real environment and the virtual environment upon the tablet will displace less toward the virtual reality extreme than shown in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, which theorises transitions between real and virtual environments in which viewing the virtual entirely occludes the real (such as when using a HMD). From the perspective of transitioning between receiving stimuli from each environment, there is an obvious difference between VTW's tablet based approach compared to a HMD approach, as the latter effectively forces all percepts to emanate from one environment whilst the former allows percepts emanating from both environments to be perceived together with one in the periphery. Whilst this intuitively makes transitions easier to perform and creates less risk of a jarring Gestalt switch, it is also expected to limit immersion in the virtual environment as the sense of `looking in to' the virtual environment will always leave the user readily aware of the real environment surrounding it.
+In terms of the combined Milgram/Waterworth model, the displacement along the locus axis when the user switches their attention between their real environment and the virtual environment upon the tablet displaces less toward the virtual reality extreme than shown in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, which theorises transitions between real and virtual environments in which viewing the virtual entirely occludes the real (such as when using a HMD). From the perspective of transitioning between receiving stimuli from each environment, there is an obvious difference between VTW's tablet based approach compared to a HMD approach, as the latter effectively forces all percepts to emanate from one environment whilst the former allows percepts emanating from both environments to be perceived together with one in the periphery. Whilst this intuitively makes transitions easier to perform and creates less risk of a jarring Gestalt switch, it was also expected to limit immersion in the virtual environment as the sense of `looking in to' the virtual environment would always leave the user readily aware of the real environment surrounding it.
 
 %Map showing spatial separation of Madras and cathedral?
-
-%How with VTW we have a small `window' into the virtual, which is then surrounded by the real. So unlike Mirrorshades which is about distributing attention by time (one environment, then the other), VTW is about distributing attention by gaze/place (different parts of a single view/combined environment).
 
 %=========================================================================================================
 
@@ -971,6 +969,9 @@ Considering the third scenario with detailed comparison of objects and artefacts
 
 \subsection{Real World Experience of VTW}
 \label{real-world-experience-of-vtw}
+
+%How with VTW we have a small `window' into the virtual, which is then surrounded by the real. So unlike Mirrorshades which is about distributing attention by time (one environment, then the other), VTW is about distributing attention by gaze/place (different parts of a single view/combined environment).
+
 Revisiting the definition of parallel reality, one can consider it to be distinguished by two principal features:
 
 \begin{enumerate}
