--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -216,9 +216,9 @@ In terms of the combined Milgram/Waterworth model, the displacement along the lo
 
 %=====================
 
-At the time of the VTW project (Summer 2012) the only fully-featured Second Life clients available were for x86 platforms. Whilst the Android client Lumiya\LumiyaFootnote{} was available, it was in early stages of development and limited in its features and usability. This limited the choice of tablet to those few x86 models that had reached market, with the MSI WindPad 110W\WindpadFootnote{} presenting the most promising solution: a 10'' tablet sporting an AMD Brazos Z01 APU (combining a dual-core x86 CPU with a Radeon HD6250 GPU).
+At the time of the VTW project (Summer 2012) the only fully-featured Second Life clients available were for x86 platforms. Whilst the Android client Lumiya\LumiyaFootnote{} was available, it was in early stages of development and limited in its features and usability. This limited the choice of tablet for VTW to those few x86 models that had reached market, with the MSI WindPad 110W\WindpadFootnote{} presenting the most promising solution: a 10'' tablet sporting an AMD Brazos Z01 APU (combining a dual-core x86 CPU with a Radeon HD6250 GPU).
 
-The Second Life client, intended for use on a desktop or laptop computer, provides provision for controlling the avatar's position and the camera orientation by keyboard, mouse and joystick. For the purposes of VTW, this position and orientation control must be tied to the physical position and orientation of the tablet itself. To this end, it was necessary to make use of various sensors connected to the tablet (either internally, or externally) and to interface these with the Second Life client for it to use their collected data to appropriately control the avatar's position and camera orientation.
+The Second Life client, intended for use on a desktop or laptop computer, provides provision for controlling the avatar's position and the camera orientation by keyboard, mouse and joystick. For the purposes of VTW, this position and orientation control had to be tied to the physical position and orientation of the tablet itself. To this end, it was necessary to make use of various sensors connected to the tablet (either internally, or externally) and to interface these with the Second Life client for it to use their collected data to appropriately control the avatar's position and camera orientation.
 
 %\cite{willmott:largecomplex} occlusion culling etc., missing in Second Life/OpenSim
 
@@ -254,7 +254,7 @@ The Second Life client, intended for use on a desktop or laptop computer, provid
 
 %=====================
 
-In order to control Second Life's camera in the fashion required for VTW, sensor data are required for the orientation in which the user is holding the tablet. Specifically the tablet's yaw and pitch are needed; roll is less important as users are expected to hold the tablet roughly level with the horizon when looking `through' it.
+In order to control Second Life's camera in the fashion required for VTW, sensor data were required for the orientation in which the user was holding the tablet. Specifically the tablet's yaw and pitch are needed; roll was considered less important as users were expected to hold the tablet roughly level with the horizon when looking `through' it.
 
 VTW considers yaw in terms of magnetic compass bearing, as this provides a value that can be used to directly control the yaw of the virtual camera if the virtual reconstruction within OpenSim is correctly oriented to OpenSim's own compass. Magnetic compass bearings are sensed electronically via a 3-axis microelectromechanical (MEMS) magnetometer, which measures the strength of magnetic field along each of its 3 axes. By comparing the values of each axis to the known direction of the field lines of Earth's magnetic field, a compass bearing relative to the magnetometer's orientation can be calculated. Pitch is sensed using a 3-axis MEMS accelerometer, which measures force of acceleration along each of its 3 axes. In the case of static or slow moving applications, this acceleration is predominantly that caused by the Earth's gravitational pull and by comparing the values between each axis the direction of this acceleration (down toward the centre of the Earth) can be determined in relation to the orientation of the accelerometer itself and thus the accelerometer's own orientation (and that of the tablet it is attached to) can be deduced.
 
@@ -302,9 +302,11 @@ SCL & A5 \\
   \label{arduino_joystick_for_second_life_1.jpg}
 \end{figure}
 
+Although the 10Hz update rate of the HMC6343 is much lower than those sported by the other packages, its combination of accelerometer and magnetometer into a single package ensured maximum accuracy: even a small discrepancy between the physical mounting of separate accelerometer and magnetometer packages would have been of noticeable detriment to the performance of the platform. The inclusion of tilt-compensation algorithms in the HMC6343 also allowed for easier and faster integration into VTW.
+
 A magnetometer used independently is only capable of providing a meaningful compass bearing when held level. In the case of applications where a compass bearing is required of a device that is not maintained level, such as in the case of VTW, the non-level orientation of the device must be taken into account to offset the readings of the magnetometer and provide a correct compass bearing. The HMC6343's combination of magnetometer, accelerometer and algorithms provides a single package that internally performs this process, using the readings from its accelerometer to compensate the readings from its magnetometer and provide a meaningful compass bearing in non-level orientations.
 
-Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses and to compensate the bearings it reports for the amount of magnetic declination at the location and date whereupon it is used. Various materials that influence magnetic fields or produce their own magnetic field distort the Earth's magnetic field and this impacts the readings that a MEMS magnetometer collects. In the case of VTW, the primary sources of consideration are the electronics of the Arduino, tablet and associated wiring. Due to the nature of these sources and the fact that they are permanently situated and attached to the same frame of reference as the magnetometer, moving as it moves, the distortions can be mitigated using a hard iron offset approach. Magnetic declination refers to the difference between `magnetic north' and geographic `true north' and varies depending upon world location and changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
+Further requirements for obtaining accurate compass bearings from a MEMS magnetometer are to account for distortions to the magnetic field it senses and to compensate the bearings it reports for the amount of magnetic declination at the location and date whereupon it is used. Various materials that influence magnetic fields or produce their own magnetic field distort the Earth's magnetic field and this impacts the readings that a MEMS magnetometer collects. In the case of VTW, the primary sources of consideration were the electronics of the Arduino, tablet and associated wiring. Due to the nature of these sources and the fact that they were permanently situated and attached to the same frame of reference as the magnetometer, moving as it moves, the distortions could be mitigated using a hard iron offset approach\footnote{\url{http://www.freescale.com/files/sensors/doc/app_note/AN4246.pdf}}. Magnetic declination refers to the difference between `magnetic north' and geographic `true north' and varies depending upon world location and changes over time, so must be updated when the magnetometer is deployed to a different location or used at a subsequent date.
 
 %***Reference for hard iron offset - here or later where we talk about the hex?
 
@@ -326,22 +328,22 @@ Further requirements for obtaining accurate compass bearings from a MEMS magneto
 
 %=====================
 
-As mentioned in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard and joystick. Using the HMC6343's compass bearing and yaw values therefore requires one of two approaches:
+As mentioned in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard and joystick. Using the HMC6343's compass bearing and yaw values therefore required one of two approaches:
 
 \begin{enumerate}
 	\item Encapsulating the compass bearing and yaw values into mouse, keyboard and/or joystick commands.
 	\item Modification to the Second Life client to allow the compass bearing and yaw values to be used directly at a lower level of abstraction.
 \end{enumerate}
 
-Method 1 has the advantage of maintaining compatibility with all Second Life clients, as all clients are forks of the same official client from Linden Lab and feature the same keyboard, mouse and joystick interfaces. However if the level of control attainable by re-purposing these interfaces for control from magnetometer and accelerometer data is not sufficient, method 2 represents the only workable option.
+Method 1 presented the advantage of maintaining compatibility with all Second Life clients, as all clients are forks of the same official client from Linden Lab and feature the same keyboard, mouse and joystick interfaces. However if the level of control attainable by re-purposing these interfaces for control from magnetometer and accelerometer data was not sufficient, method 2 would represent the only workable option.
 
-Conceptually, all Arduino boards are programmed over an RS-232 serial connection. When the platform was first launched the Arduino boards themselves had a physical DE-9 serial connector with which to connect to a host computer's serial connector. But as serial connectors all but disappeared from modern computers the Arduino's serial connector was replaced in later revisions with a USB connector, as USB is now all but ubiquitous on today's computers. The move from a physical RS-232 connector to a USB connector requires additional hardware upon the Arduino board to convert between RS-232 and USB, as the ATMega328\atmegaTFootnote{} microcontroller at the heart of the Arduino Uno R3 does not sport a USB interface itself. For this reason the current revision, the Arduino Uno R3, sports an ATMega16U2\atmegaFootnote{} microcontroller that serves simply to convert communications between the two standards, RS-232 and USB.
+Conceptually, all Arduino boards are programmed over an RS-232 serial connection. When the platform was first launched the Arduino boards themselves had a physical DE-9 serial connector with which to connect to a host computer's serial connector. But as serial connectors all but disappeared from modern computers the Arduino's serial connector was replaced in later revisions with a USB connector, as USB is now all but ubiquitous on today's computers. The move from a physical RS-232 connector to a USB connector required additional hardware upon the Arduino board to convert between RS-232 and USB, as the ATMega328\atmegaTFootnote{} microcontroller at the heart of the Arduino Uno R3 does not sport a USB interface itself. For this reason the current revision, the Arduino Uno R3, sports an ATMega16U2\atmegaFootnote{} microcontroller that serves simply to convert communications between the two standards, RS-232 and USB.
 
-With its stock firmware, the Arduino's ATMega16U2 presents itself to the host computer as a USB-to-serial bridge, however this stock firmware can be replaced in order to change its behaviour. One alternative behaviour has it act as a USB Human Interface Device (HID) class controller, identifying itself to the host computer as one of myriad input devices - including joysticks. Using a USB HID class joystick firmware for the ATMega16U2\arduinousbhidFootnote{}, based upon the Lightweight USB Framework for AVRs (LUFA)\lufaFootnote{}, the Arduino can imitate a standard USB joystick, sending joystick commands to the host computer using the protocol of the USB specification.
+With its stock firmware the Arduino's ATMega16U2 presents itself to the host computer as a USB-to-serial bridge, however this stock firmware can be replaced in order to change its behaviour. One alternative behaviour has it act as a USB Human Interface Device (HID) class controller, identifying itself to the host computer as one of myriad input devices - including joysticks. Using a USB HID class joystick firmware for the ATMega16U2\arduinousbhidFootnote{}, based upon the Lightweight USB Framework for AVRs (LUFA)\lufaFootnote{}, the Arduino can imitate a standard USB joystick, sending joystick commands to the host computer using the protocol of the USB specification.
 
 %***How to flash the firmware
 
-In this manner the Arduino can marshal the values obtained from the HMC6343 into standard USB HID joystick commands, allowing the Second Life client's stock joystick interface (see figure \ref{arduino_joystick_for_second_life_3.jpg}) to be used to control the camera orientation (and avatar movement) according to the physical orientation of the HMC6343. A simple example of this can be seen in a video available to view online\ArduinoJoystickVideoFootnote{}.
+In this manner the Arduino could marshal the values obtained from the HMC6343 into standard USB HID joystick commands, allowing the Second Life client's stock joystick interface (see figure \ref{arduino_joystick_for_second_life_3.jpg}) to be used to control the camera orientation (and avatar movement) according to the physical orientation of the HMC6343. A simple example of this in action can be seen in a video available to view online\ArduinoJoystickVideoFootnote{}.
 
 \begin{figure}[h]
 \centering
@@ -350,18 +352,18 @@ In this manner the Arduino can marshal the values obtained from the HMC6343 into
   \label{arduino_joystick_for_second_life_3.jpg}
 \end{figure}
 
-Unfortunately this experiment revealed that the precision attainable through this approach was not sufficient for the style of control and interaction required for VTW. Specifically the Second Life client's joystick interface applies smoothing/damping to the joystick inputs, preventing reliable rotations or movements of specific values: sending a joystick command to rotate the camera by $x$\textdegree\ followed by a second command to rotate the camera by $-x$\textdegree\ does not reliably return the camera to its original orientation from before the application of the first rotation. As the required interaction is to map the \textit{absolute} orientation of the tablet to the Second Life camera, this discrepancy (which cannot be disabled from the Second Life client's joystick configuration) renders the approach unworkable.
+Unfortunately this experiment revealed that the precision attainable through this approach was not sufficient for the style of control and interaction required for VTW. Specifically the Second Life client's joystick interface seemed to apply smoothing/damping to the joystick inputs, preventing reliable rotations or movements of specific values: sending a joystick command to rotate the camera by $x$\textdegree\ followed by a second command to rotate the camera by $-x$\textdegree\ did not reliably return the camera to its original orientation from before the application of the first rotation. As the required interaction was to map the \textit{absolute} orientation of the tablet to the Second Life camera, this discrepancy (which cannot be disabled from the Second Life client's joystick configuration) rendered the approach unworkable.
 
 %=========================================================================================================
 
 \section{Position Control}
 \label{second_life_position_control}
 
-In order to control the position of the Second Life avatar, sensor data are required for the position of the user in the real world. VTW is intended for use upon outdoor sites, namely those where there are traces of ruins and often unobstructed views of the sky, so GPS represents the logical choice for tracking user position. GPS has been widely used as a localization technique within virtual heritage, particularly for augmented reality applications.
+In order to control the position of the Second Life avatar, sensor data were required for the position of the user in the real world. VTW was intended for use at outdoor sites, namely those where there are traces of ruins and often unobstructed views of the sky, so GPS represented the logical choice for tracking user position. GPS has been widely used as a localization technique within virtual heritage, particularly for augmented reality applications.
 
 %***diagram showing this
 
-In order for readings from a GPS receiver to be used to control the position of the Second Life avatar within a reconstruction, a translation must be performed between the coordinate system of GPS (latitude and longitude) and the coordinate system of Second Life (simple X,Y coordinates within 256 metre square `regions'). This is achieved by use of a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X,Y coordinates are known. Calculating displacement within Second Life from these X,Y coordinates is achieved by applying the scale of the reconstruction to the displacement between the anchor point's latitude and longitude and the user's current position reported as latitude and longitude by a GPS receiver. This real world displacement is calculated using the haversine formula~\cite{VanBrummelen2012}, which is used to calculate the `great circle' (orthodromic) distance between two points on the surface of a sphere (such as the Earth, when simplified from its oblate spheroid shape). The central angle \text{$\left(\frac{d}{r}\right)$} between the two points is given by:
+In order for readings from a GPS receiver to be used to control the position of the Second Life avatar within a reconstruction, translations had to be performed between the coordinate system of GPS (latitude and longitude) and the coordinate system of Second Life (simple X,Y coordinates within 256 metre square `regions'). This was achieved by use of a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X,Y coordinates were known. Calculating displacement within Second Life from these X,Y coordinates is achieved by applying the scale of the reconstruction to the displacement between the anchor point's latitude and longitude and the user's current position reported as latitude and longitude by a GPS receiver. This real world displacement is calculated using the haversine formula~\cite{VanBrummelen2012}, which is used to calculate the `great circle' (orthodromic) distance between two points on the surface of a sphere (such as the Earth, when simplified from its oblate spheroid shape). The central angle \text{$\left(\frac{d}{r}\right)$} between the two points is given by:
 
 \begin{equation}
 \label{haversine1}
@@ -396,9 +398,9 @@ d & = 2r \arcsin\left( \sqrt{\text{haversin} \left( \phi_{2} - \phi_{1} \right) 
 & = 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right) + \cos\left( \phi_{1} \right) \cos\left( \phi_{2} \right) \sin^{2} \left( \frac{\lambda_{2} - \lambda_{1}}{2} \right) } \right)
 \end{align}
 
-The prerequisites for this approach are that the Second Life model is aligned correctly to the Second Life compass as the real location is aligned to real bearings (also required for orientation control, as mentioned in the previous section), a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X and Y coordinates are known, and that the reconstruction adheres to a known consistent scale.
+The prerequisites for this approach were that the Second Life model be aligned correctly to the Second Life compass as the real location is aligned to real bearings (also required for orientation control, as mentioned in the previous section), a single `anchor point' for which both the real world latitude and longitude and the corresponding virtual world X and Y coordinates are known, and that the reconstruction adhered to a known consistent scale.
 
-Figure \ref{haversine_example.png} illustrates this arrangement. In the real world on the left, we know the latitude and longitude of the anchor point as well as the latitude and longitude of the user's current position as reported by the GPS receiver. In the virtual world on the right, we know the X,Y coordinates that are equivalent to the latitude and longitude of the anchor point and we must calculate the X,Y coordinates that are equivalent to the user's current position as reported by the GPS receiver.
+Figure \ref{haversine_example.png} illustrates the approach. In the real world on the left, we know the latitude and longitude of the anchor point as well as the latitude and longitude of the user's current position as reported by the GPS receiver. In the virtual world on the right, we know the X,Y coordinates that are equivalent to the latitude and longitude of the anchor point and we must calculate the X,Y coordinates that are equivalent to the user's current position as reported by the GPS receiver.
 
 \begin{figure}[h]
 \centering
@@ -419,7 +421,7 @@ While the difference in latitude between the anchor point and the user's positio
 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right)} \right)
 \end{equation}
 
-Applying the scale of the reconstruction to these values gives $\Delta$x and $\Delta$y, which can then be added to or subtracted from the X,Y coordinates of the anchor point to give the coordinates of the user's position, $\upsilon_{2}(x),\upsilon_{2}(y)$.
+Applying the scale of the reconstruction to these values gives $\Delta$x and $\Delta$y, which are then added to or subtracted from the X,Y coordinates of the anchor point to give the coordinates of the user's position, $\upsilon_{2}(x),\upsilon_{2}(y)$.
 
 %Using the haversine formula the great-circle (or orthodromic) distance between the latitude of the anchor point and the latitude of the new GPS reading is calculated, then applying the scale of the model results in the equivalent distance in OpenSim metrics between the Y coordinate of the anchor point and the Y coordinate of the position corresponding to the new GPS reading. Repeating the same calculations with the longitude of the new GPS reading provides the distance between the X coordinate of the anchor point and the X coordinate of the position corresponding to the new GPS reading. Adding or subtracting these distances as appropriate to the OpenSim coordinates of the anchor point provides the OpenSim coordinates that correspond to the new GPS reading, to which the avatar is then instructed to move.
 
@@ -451,7 +453,7 @@ Applying the scale of the reconstruction to these values gives $\Delta$x and $\D
 
 %=====================
 
-The WindPad features an internal AzureWave GPS-M16 GPS receiver\azurewaveFootnote{}, however poor API provision and meagre documentation required the adoption of an alternative receiver. As an Arduino was already being used to provide orientation data from accelerometer and magnetometer, integrating the GPS receiver into this package such that all orientation and position data came from a single interface was prudent. After receiving input and advice from the UK High Altitude Society\habFootnote{}, \textit{``a loose collection of people who are interested in launching unmanned high altitude balloons into near space''} who make extensive use of GPS receivers for tracking their launches, the u-blox MAX-6\ubloxFootnote{} GPS receiver outfitted with a Sarantel SL-1202\sarantelFootnote{} passive antenna was chosen to provide position data for the VTW platform. The MAX-6 is of higher operational specification than the GPS-M16 and supports Satellite Based Augmentation Systems (SBAS) which improve the accuracy of location data by applying additional correction data received from networks of satellites and ground-based transmitters separate to those of the GPS satellites. These networks include the European Geostationary Navigation Overlay Service (EGNOS) that covers the UK where the VTW platform was developed and evaluated.
+The WindPad features an internal AzureWave GPS-M16 GPS receiver\azurewaveFootnote{}, however poor API provision and meagre documentation required the adoption of an alternative receiver. As an Arduino was already being used to provide orientation data from accelerometer and magnetometer, integrating the GPS receiver into this package such that all orientation and position data came from a single interface was prudent. After receiving input and advice from the UK High Altitude Society\habFootnote{}, \textit{``a loose collection of people who are interested in launching unmanned high altitude balloons into near space''} who make extensive use of GPS receivers for tracking their launches, the u-blox MAX-6\ubloxFootnote{} GPS receiver outfitted with a Sarantel SL-1202\sarantelFootnote{} passive antenna was chosen to provide position data for the VTW platform. The MAX-6 is of higher operational specification than the GPS-M16 and supports Satellite Based Augmentation Systems (SBAS), which improves the accuracy of location data by applying additional correction data received from networks of satellites and ground-based transmitters separate to those of the GPS satellites. These networks include the European Geostationary Navigation Overlay Service (EGNOS) that covers the UK where the VTW platform was developed and evaluated.
 
 Figure \ref{arduino_wiring_hmc_ublox.png} provides a wiring diagram for connectivity of a u-blox MAX-6 to an Arduino Uno R3, along with the HMC6343 from section \ref{OrientationControl}, with the pinout values provided by tables \ref{HMC6343_MAX6_wiringtable_HMC6343} and \ref{HMC6343_MAX6_wiringtable_MAX6}. The LED and 220$\Omega$ resistor on digital pin 12 is used for diagnostic output. The wiring shown here is for a MAX-6 breakout without I2C connectivity, instead using Arduino's SoftwareSerial\softwareserialFootnote{} library.
 
@@ -528,9 +530,9 @@ The MAX-6 was configured as follows:
 
 The Dynamic Platform Models adjust how the onboard navigation engine processes the readings that the receiver produces and by choosing the correct model for the receiver's application the accuracy of position output is increased. As VTW is an application in which the user walks about an outdoor cultural heritage site, the pedestrian model is most suitable. SBAS is enabled for the EGNOS, which is available at cultural heritage sites within Scotland, in order to improve the accuracy of the position output.
 
-The output of the receiver is in the form of messages in the NMEA 0183 protocol from the National Marine Electronics Association\footnote{\url{https://www.nmea.org/content/nmea_standards/nmea_0183_v_410.asp}}. By default the MAX-6 sends many more message types than are required for VTW and as the Arduino's processing power is limited the superfluous messages are disabled. The GPRMC message format contains the recommended minimum amount of information for transit applications, including time, latitude and longitude, which covers all of the position information required by VTW.
+The output of the receiver is in the form of messages in the NMEA 0183 protocol from the National Marine Electronics Association\footnote{\url{https://www.nmea.org/content/nmea_standards/nmea_0183_v_410.asp}}. By default the MAX-6 sends many more message types than are required for VTW and as the Arduino's processing power is limited the superfluous messages were disabled. The GPRMC message format contains the recommended minimum amount of information for transit applications, including time, latitude and longitude, which covers all of the position information required by VTW.
 
-These configurations are effected by sending the MAX-6 commands encoded in the UBX protocol as arrays of hex values, which the Arduino is capable of doing at power on. For example, setting the Dynamic Platform Model to Pedestrian is performed with the code in figure \ref{arduinoMAX6hex}, where \path{sendUBX} is a function that writes to the MAX-6 using SoftwareSerial;
+These configurations were effected by sending the MAX-6 commands encoded in the UBX protocol as arrays of hex values, which the Arduino is capable of doing at power on. For example, setting the Dynamic Platform Model to Pedestrian is performed with the code in figure \ref{arduinoMAX6hex}, where \path{sendUBX} is a function that writes to the MAX-6 using SoftwareSerial;
 
 \begin{figure}[h]
 \begin{lstlisting}[language=C, numbers=left, numberstyle=\small, stepnumber=1, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
@@ -575,9 +577,9 @@ One of the extensions that the OpenSim server provides over the Second Life serv
 	\textit{``Region modules are .net/mono DLLs. During initialization of the simulator, the OpenSimulator bin directory (bin/) and the scriptengines (bin/ScriptEngines) directory are scanned for DLLs, in an attempt to load region modules stored there. Region modules execute within the heart of the simulator and have access to all its facilities. Typically, region modules register for a number of events, e.g. chat messages, user logins, texture transfers, and take what ever steps are appropriate for the purposes of the module.''}\RegionModuleFootnote{}
 \end{quotation}
 
-Region modules allow for more complex and powerful extensions written in \texttt{C\#} to be developed external to the OpenSim platform than would otherwise be possible via Second Life's internal Linden Scripting Language (LSL). Similar to how the Second Life client's joystick interface represented an opportunity to implement the orientation control of VTW without relying upon a bespoke, modified client, an OpenSim Region Module represented a possibility to implement the position control required by VTW without similar reliance upon a bespoke client.
+Region modules allow for more complex and powerful extensions written in \texttt{C\#} to be developed, external to the OpenSim platform, than would otherwise be possible via Second Life's internal Linden Scripting Language (LSL). Similar to how the Second Life client's joystick interface represented an opportunity to implement the orientation control of VTW without relying upon a bespoke, modified client, an OpenSim Region Module represented a possibility to implement the position control required by VTW without similar reliance upon a bespoke client.
 
-An excerpt from the implementation in this manner of the position control required by VTW as a region module is included as \ref{RegionModuleCode1} (the full region module code is available online\RegionModuleCodeFootnote{}). This shows the use of haversine, implemented using the \texttt{atan2()} function, calculating the displacement in real world latitude between the anchor point and the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) and then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate and the avatar is then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position.
+An excerpt from the implementation of the VTW position control as a region module is included as \ref{RegionModuleCode1} (the full region module code is available online\RegionModuleCodeFootnote{}). This shows the use of haversine, implemented using the \texttt{atan2()} function, calculating the displacement in real world latitude between the anchor point and the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) and then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate and the avatar is then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position. Unlike using the joystick interface to effect camera control without modifying the Second Life client, this region module approach to position control successfully produced usable results.
 
 \begin{figure}[h]
 \begin{lstlisting}[language=Java, numbers=left, numberstyle=\small, stepnumber=1, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
@@ -618,7 +620,7 @@ private Vector3 LatitudeLongitudeToRegionCoordinate(double newLat, double newLon
 
 \section{Modifying Second Life for Orientation and Position Control}
 
-Due to the Second Life client's existing control interfaces not allowing enough control over camera orientation for VTW's requirements (section \ref{exploitJoystick}), it was necessary to modify the client's codebase to produce a bespoke client allowing complete control over orientation by magnetometer and accelerometer input. Although sufficient position control was obtained via an OpenSim region module (section \ref{regionModule}) it was prudent to also encapsulate position control through the modified client; not only does this allow for finer grain control, it also removes the dependency upon the virtual reconstruction being hosted upon an OpenSim server (Second Life's own servers do not support extension via Region Modules). Thus the Second Life client was modified with the addition of the ability to:
+Due to the Second Life client's existing control interfaces not allowing enough control over camera orientation for VTW's requirements (section \ref{exploitJoystick}), it was necessary to modify the client's codebase to produce a bespoke client allowing complete control over orientation by magnetometer and accelerometer input. Although sufficient position control was obtained via an OpenSim region module (section \ref{regionModule}) it was deemed prudent to also encapsulate position control into the modified client. This not only allowed for finer grain control, it also removed the dependency upon the virtual reconstruction being hosted upon an OpenSim server; Second Life's own servers do not support extension via Region Modules. Thus the Second Life client was modified with the addition of the ability to:
 
 \begin{itemize}
 	\item Connect to a serial device for input/output.
@@ -644,7 +646,7 @@ Due to the Second Life client's existing control interfaces not allowing enough 
 
 %Replaced the Linden Boost binary with that built by LightDrake
 
-The Second Life client is written predominantly in \texttt{C++} so the Asio library\asioFootnote{} from the popular Boost project\boostFootnote{} was used to imbue it with serial connectivity, allowing it to receive messages from the Arduino in an asynchronous non-blocking fashion. The fundamental buffered asynchronous serial handling was implemented using Terraneo Federico's \path{AsyncSerial} class\fedetftFootnote{} which is included in the client codebase as \path{/indra/newview/AsyncSerial}. The majority of the functionality added to the client is then contained within \path{/indra/newview/LLViewerSerialMovement}. The core executable of the viewer \path{/indra/newview/LLAppViewer} obtains an instance of \path{LLViewerSerialMovement} and calls \path{LLViewerSerialMovement::update()} upon each iteration of the client's main update loop \path{LLAppViewer::mainLoop()}. These modifications are visualised by figure \ref{second_life_structure.png} and the modified client codebase is available online\footnote{\url{https://bitbucket.org/cj_davies/viewer-release-serial-io}}.
+The Second Life client is written predominantly in \texttt{C++} so the Asio library\asioFootnote{} from the popular Boost project\boostFootnote{} was used to imbue it with serial connectivity, allowing it to receive messages from the Arduino in an asynchronous non-blocking fashion. The fundamental buffered asynchronous serial handling was implemented using Terraneo Federico's \path{AsyncSerial} class\fedetftFootnote{} which is included in the client codebase as \path{/indra/newview/AsyncSerial}. The majority of the functionality added to the client was then implemented within \path{/indra/newview/LLViewerSerialMovement}. The core executable of the viewer \path{/indra/newview/LLAppViewer} obtains an instance of \path{LLViewerSerialMovement} and calls \path{LLViewerSerialMovement::update()} upon each iteration of the client's main update loop \path{LLAppViewer::mainLoop()}. These modifications are visualised by figure \ref{second_life_structure.png} and the modified client codebase is available online\footnote{\url{https://bitbucket.org/cj_davies/viewer-release-serial-io}}.
 
 \begin{figure}[h]
 \centering
@@ -737,7 +739,7 @@ Table \ref{pangolin-function-reference} provides documentation of the functions 
 
 Controlling the avatar's position according to latitude and longitude readings from the GPS receiver was again implemented using the haversine formula. This implementation, included as figure \ref{secondlifehaversine}, can be compared to the OpenSim region module implementation previously included as figure \ref{RegionModuleCode1}. One important difference between the Second Life client implementation and the OpenSim region module implementation is that the former uses global coordinates, rather than local coordinates\regionmodulelimitationFootnote{}. This means that the Second Life client implementation allows positional control of an avatar across region boundaries, crucial for use with a cultural heritage reconstruction that spans multiple regions in an OpenSim `megaregion'\megaregionFootnote{} such as that used for testing of VTW.
 
-These modifications to the Second Life client are configured/controlled via a window added to the client and accessed via a menu entry (see figure \ref{pangolin_second_life_dialogue.png}). The implementation of this window resides in \path{/indra/newview/LLViewerSerialMonitor}. This allows for specification of the path to the serial device, along with its baudrate, as well as the specification of the anchor point - the latitude and longitude of the point in the real world and the equivalent X/Y coordinates in the Second Life reconstruction. The window then provides diagnostic output showing the reconstructed messages coming in from the serial device, along with controls to individually enable/disable orientation and position control and alter the high-pass and smoothing applied to both controls.
+These modifications to the Second Life client are configured/controlled via a window added to the client and accessed via a menu entry (see figure \ref{pangolin_second_life_dialogue.png}). The implementation of this window resides in \path{/indra/newview/LLViewerSerialMonitor}. This allows for specification of the path to the serial device, along with its baudrate, as well as the specification of the anchor point: the latitude and longitude of the point in the real world and the equivalent X/Y coordinates in the Second Life reconstruction. The window then provides diagnostic output showing the reconstructed messages coming in from the serial device, along with controls to individually enable/disable orientation and position control and alter the high-pass and smoothing applied to both controls.
 
 \begin{figure}[h]
 \centering
